# hydrogen

./: Cargo.toml  README.md
crates/hydrogen_app/: Cargo.toml
crates/hydrogen_app/src/: app.rs  input.rs  lib.rs
crates/hydrogen_core/: Cargo.toml
crates/hydrogen_core/src/: app.rs  dependency.rs  dyn_util.rs  events.rs  global_dependency.rs  input.rs  lib.rs
crates/hydrogen_core_proc_macro/: Cargo.toml
crates/hydrogen_core_proc_macro/src/: lib.rs
crates/hydrogen_data_structures/: Cargo.toml
crates/hydrogen_data_structures/src/: compression.rs  cube_array.rs  finite_state.rs  indexed_container.rs  lib.rs  paletted_bitfield.rs  selection.rs
crates/hydrogen_debug/: Cargo.toml
crates/hydrogen_debug/src/: lib.rs
crates/hydrogen_debug_proc_macro/: Cargo.toml
crates/hydrogen_debug_proc_macro/src/: lib.rs
crates/hydrogen_ecs/: Cargo.toml
crates/hydrogen_ecs/src/: change_tracker.rs  component.rs  ecs_net.rs  entity.rs  lib.rs  world.rs
crates/hydrogen_ecs_proc_macro/: Cargo.toml
crates/hydrogen_ecs_proc_macro/src/: lib.rs
crates/hydrogen_graphics/: Cargo.toml
crates/hydrogen_graphics/src/: binding.rs  camera.rs  color.rs  gpu_handle.rs  gpu_vec.rs  graphics_controller.rs  indexed_vertices.rs  lib.rs  pipeline.rs  render_target.rs  texture.rs  texture_provider.rs  vertex.rs
crates/hydrogen_graphics/src/shaders/: main_2d.wgsl  main_3d.wgsl  mod.rs  present.wgsl
crates/hydrogen_gui/: Cargo.toml
crates/hydrogen_gui/src/: builder.rs  element.rs  lib.rs  text.rs  texture_frame.rs
crates/hydrogen_gui/src/component/: button.rs  menu.rs  mod.rs  text_box.rs  text_button.rs
crates/hydrogen_math/: Cargo.toml
crates/hydrogen_math/src/: axis.rs  bounding_box.rs  direction.rs  direction_map.rs  float_ext.rs  lib.rs  numerical_integration.rs  rect.rs  rect_packer.rs  sign.rs
crates/hydrogen_net/: Cargo.toml
crates/hydrogen_net/src/: comm.rs  ecs_net.rs  lib.rs  server_client.rs
crates/hydrogen_net_proc_macro/: Cargo.toml
crates/hydrogen_net_proc_macro/src/: lib.rs
src/: lib.rs  main.rs
