[package]
name = "hydrogen_app"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30.8"
hydrogen_core = { path = "../hydrogen_core" }
hydrogen_math = { path = "../hydrogen_math" }
hydrogen_graphics = { path = "../hydrogen_graphics" }
derive_more = { version = "2.0.1", features = [
    "add",
    "add_assign",
    "as_ref",
    "constructor",
    "deref",
    "deref_mut",
    "display",
    "error",
    "from",
    "from_str",
    "index",
    "index_mut",
    "into",
    "into_iterator",
    "is_variant",
    "mul",
    "mul_assign",
    "not",
    "sum",
    "try_from",
    "try_into",
    "try_unwrap",
    "unwrap",
] }
linear-map = "1.2.0"
cgmath = "0.18.0"
rand = "0.9.0"
