[package]
name = "hydrogen_data_structures"
version = "0.1.1"
edition = "2021"

[dependencies]
hydrogen_math = { path = "../hydrogen_math" }
cgmath = "0.18.0"
linear-map = "1.2.0"
serde = "1.0.204"
derive_more = { version = "2.0.1", features = [
    "add",
    "add_assign",
    "as_ref",
    "constructor",
    "deref",
    "deref_mut",
    "display",
    "error",
    "from",
    "from_str",
    "index",
    "index_mut",
    "into",
    "into_iterator",
    "is_variant",
    "mul",
    "mul_assign",
    "not",
    "sum",
    "try_from",
    "try_into",
    "try_unwrap",
    "unwrap",
] }
thiserror = "1.0.62"
