[package]
name = "hydrogen_data_structures"
version = "0.1.2"
edition = "2024"

[dependencies]
hydrogen_math = { path = "../hydrogen_math" }
cgmath = "0.18.0"
linear-map = "1.2.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_bytes = { version = "0.11.19", features = ["alloc"] }
derive_more = { version = "2.0.1", features = [
    "add",
    "add_assign",
    "as_ref",
    "constructor",
    "deref",
    "deref_mut",
    "display",
    "error",
    "from",
    "from_str",
    "index",
    "index_mut",
    "into",
    "into_iterator",
    "is_variant",
    "mul",
    "mul_assign",
    "not",
    "sum",
    "try_from",
    "try_into",
    "try_unwrap",
    "unwrap",
] }
thiserror = "1.0.62"
zune-inflate = "0.2.54"
postcard = { version = "1.1.3", features = ["alloc"] }
flate2 = "1.1.5"
