[package]
name = "hydrogen_ecs"
version = "0.1.5"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
derive_more = { version = "2.0.1", features = [
    "add",
    "add_assign",
    "as_ref",
    "constructor",
    "deref",
    "deref_mut",
    "display",
    "error",
    "from",
    "from_str",
    "index",
    "index_mut",
    "into",
    "into_iterator",
    "is_variant",
    "mul",
    "mul_assign",
    "not",
    "sum",
    "try_from",
    "try_into",
    "try_unwrap",
    "unwrap",
] }
paste = "1.0.15"
postcard = { version = "1.0.10", features = ["alloc"] }
serde = "1.0.209"
thiserror = "2.0.11"
hydrogen_ecs_proc_macro = { path = "../hydrogen_ecs_proc_macro" }
hydrogen_net = { path = "../hydrogen_net" }
hydrogen_data_structures = { path = "../hydrogen_data_structures" }
hydrogen_core = { path = "../hydrogen_core" }
aligned-vec = "0.6.1"
typetag = "0.2.18"
dyn-clone = "1.0.17"
