[package]
name = "hydrogen_graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = "0.18.0"
image = "0.25.1"
lazy_static = "1.4.0"
derive_more = "0.99.17"
futures = "0.3.30"
bytemuck = { version = "1.16.0", features = ["derive"] }
anyhow = "1.0.86"
linear-map = "1.2.0"
include_dir = "0.7.4"
winit = "0.30.3"
hydrogen_math = { path = "../hydrogen_math" }
serde = "1.0.204"
hydrogen_data_structures = { path = "../hydrogen_data_structures" }
wgpu = "22.0.0"
