[package]
name = "hydrogen_graphics"
version = "0.1.11"
edition = "2021"

[dependencies]
cgmath = { version = "0.18.0", features = ["swizzle"] }
image = "0.25.1"
lazy_static = "1.4.0"
derive_more = { version = "2.0.1", features = [
    "add",
    "add_assign",
    "as_ref",
    "constructor",
    "deref",
    "deref_mut",
    "display",
    "error",
    "from",
    "from_str",
    "index",
    "index_mut",
    "into",
    "into_iterator",
    "is_variant",
    "mul",
    "mul_assign",
    "not",
    "sum",
    "try_from",
    "try_into",
    "try_unwrap",
    "unwrap",
] }
futures = "0.3.30"
bytemuck = { version = "1.16.0", features = ["derive"] }
anyhow = "1.0.86"
include_dir = "0.7.4"
winit = "0.30.8"
hydrogen_math = { path = "../hydrogen_math" }
serde = "1.0.204"
hydrogen_data_structures = { path = "../hydrogen_data_structures" }
wgpu = "24.0.1"
log = "0.4.25"
env_logger = "0.11.6"
