[package]
name = "hydrogen_gui"
version = "0.2.0"
edition = "2024"

[dependencies]
cgmath = { version = "0.18.0", features = ["swizzle"] }
clipboard-anywhere = "0.2.3"
codepage-437 = "0.1.0"
derive_more = { version = "2.0.1", features = [
    "add",
    "add_assign",
    "as_ref",
    "constructor",
    "deref",
    "deref_mut",
    "display",
    "error",
    "from",
    "from_str",
    "index",
    "index_mut",
    "into",
    "into_iterator",
    "is_variant",
    "mul",
    "mul_assign",
    "not",
    "sum",
    "try_from",
    "try_into",
    "try_unwrap",
    "unwrap",
] }
image = "0.25.1"
lazy_static = "1.5.0"
serde = "1.0.204"
hydrogen_core = { path = "../hydrogen_core" }
hydrogen_data_structures = { path = "../hydrogen_data_structures" }
hydrogen_math = { path = "../hydrogen_math" }
hydrogen_graphics = { path = "../hydrogen_graphics" }
color-eyre = "0.6.3"
winit = "0.30.4"
env_logger = "0.11.3"
log = "0.4.22"
